Color error correction on mobile phones

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
 
 body {
   margin: 0 auto;
+  color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
   text-align: center;
   min-height: 100vh;
